# esphome_vitohome

./: .clang-format  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  NOTICE.md  README.md  UPSTREAM.md  converters.md  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  precommit-autoupdate.yml  upstream-canary.yml
components/vitohome/: __init__.py  binary_sensor.py  button.py  climate.py  decode.h  event.py  number.py  poll_schedule.h  protocol_adapter.h  protocol_select.h  response_view.h  ring_buffer.h  select.py  sensor.py  switch.py  text.py  text_sensor.py  vito_binary_sensor.cpp  vito_binary_sensor.h  vito_button.cpp  vito_button.h  vito_climate.cpp  vito_climate.h  vito_clock.cpp  vito_clock.h  vito_entity.h  vito_event.cpp  vito_event.h  vito_number.cpp  vito_number.h  vito_select.cpp  vito_select.h  vito_sensor.cpp  vito_sensor.h  vito_switch.cpp  vito_switch.h  vito_text.cpp  vito_text.h  vito_text_sensor.cpp  vito_text_sensor.h  (+3 more)
components/vitohome/optolink/: CMakeLists.txt  THIRD_PARTY.md  constants.cpp  constants.h  helpers.h  library.json  logging.h  optolink.h
components/vitohome/optolink/datapoint/: conversion_helpers.cpp  conversion_helpers.h  converter.cpp  converter.h  datapoint.cpp  datapoint.h
components/vitohome/optolink/interface/: generic_interface.h  serial_interface.h
components/vitohome/optolink/protocol/gwg/: gwg.cpp  gwg.h  packet_gwg.cpp  packet_gwg.h
components/vitohome/optolink/protocol/vs1/: packet_vs1.cpp  packet_vs1.h  vs1.cpp  vs1.h
components/vitohome/optolink/protocol/vs2/: packet_vs2.cpp  packet_vs2.h  parser_vs2.cpp  parser_vs2.h  vs2.cpp  vs2.h
docs/: converters.md  design_notes.md  development_notes.md  stage2_design.md  vendoring_cleanup_and_transaction_tests.md
example/: README.md  hardware-test.yaml  secrets.example.yaml  viessmann-20cb-vitohome.yaml  vitohome-climate.yaml  vitohome-dhw.yaml  vitohome-scanner-raw.yaml  vitohome-timer-clock.yaml  vscot2.vitohome.yaml  vscotho1_72.dp.complete.yaml  vscotho1_72.dp.curated.yaml  vscotho1_72.vitohome.yaml
example/catalogs/: README.md  bess.yaml  cu401b_a.yaml  cu401b_g.yaml  cu401b_s.yaml  dekatel_m.yaml  ea2.yaml  ecotronic.yaml  ecotronic_100.yaml  index.csv  puffermgm.yaml  v050hk1m.yaml  v050hk1m_7.yaml  v050hk1m_8.yaml  v050hk1m_9.yaml  v050hk1s.yaml  v050hk1s_7.yaml  v050hk1s_8.yaml  v050hk1s_9.yaml  v050hk1w.yaml  v050hk1w_7.yaml  v050hk1w_8.yaml  v050hk1w_9.yaml  v050hk3s.yaml  v050hk3s_7.yaml  (+157 more)
scripts/: NOTICE.md  README.md  coverage_decode.sh  fault_codes.py  gen_catalog.py  migrate_ecnViessmann.cmd  test.yml  validate_examples.sh  verify_counts.ps1  verify_encoding.ps1
tests/: common-gwg.yaml  common.yaml  test.esp32-arduino.yaml  test.esp32-idf-gwg.yaml  test.esp32-idf-kw.yaml  test.esp32-idf-native.yaml  test.esp32-idf-single-platform.yaml  test.esp32-idf.yaml
vitohome/: vito_binary_sensor.h  vito_entity.h  vitohome.cpp
(+32 files in other folders)
